# Recipe-API

./: .gitignore  Cargo.toml  README.md
migrations/: 01_create_ingredient  01_create_recipe.sql  01_create_recipe_ingredient
src/: api.rs  main.rs
tests/: tests.rs
