[package]
name = "recipe_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "tls-native-tls", "uuid"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
dotenvy = "0.15.7"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
test-context = "0.4.0"
once_cell = "1.18"
